--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
     "undefsafe": "^2.0.5"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "",
-  "start": "node app.js",
   "license": "ISC"
 }
